# Flet-Portfolio

./: CNAME  README.md  colors.py  fly.toml  main.py  neu.py  pyproject.toml
.github/workflows/: desktop-and-mobile-builds.yml
assets/: index.html
src/: colors.py  main.py  neu.py
src/assets/locale/: localisation.csv
src/background/: __init__.py
src/components/: __init__.py
src/infos/: __init__.py
src/localisation/: __init__.py  localisation.csv  translations.py
src/views/: __init__.py  flashlight.py  home.py  portfolio.py
