[project]
name = "flet-portfolio"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "tct123", email = "tct1234@protonmail.com" }]

dependencies = ["flet>=0.80.4", "flet-audio", "flet_localisation", "mylocale"]

[dependency-groups]
dev = ["flet-cli>=0.80.4", "flet-desktop>=0.80.4", "flet-web>=0.80.4"]

[tool.flet]
org = "de.cmg"
product = "Flet Portfolio"
company = "Creative Media Group"
copyright = "Copyright (C) 2026 by Creative Media Group"

[tool.flet.app]
path = "src"

[tool.flet.android]
dependencies = ["pyjnius"]

[tool.flet.ios]
dependencies = ["pyobjus"]
